--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/myusra99/amald'"
               >
                 Github
               </button>
@@ -354,7 +354,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/myusra99/ml4agriculture'"
               >
                 Github
               </button>
@@ -368,7 +368,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/myusra99/ml4healthcare'"
               >
                 Github
               </button>
