--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree <br />M.Sc. Masters Degree</p>
+              <p>B.Sc.in Computer Science <br />M.Sc.in Computer Science</p>
             </div>
           </div>
           <div class="text-container">
@@ -220,6 +220,17 @@
                   <p>Exprienced</p>
                 </div>
               </article>
+               <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>MongoDB</h3>
+                  <p>Exprienced</p>
+                </div>
+              </article>
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -228,6 +239,17 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
+                  <p>Exprienced</p>
+                </div>
+              </article>
+               <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>PHP</h3>
                   <p>Exprienced</p>
                 </div>
               </article>
@@ -293,7 +315,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Tensorflow</h3>
+                  <h3>TensorFlow</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -305,7 +327,7 @@
                 />
                 <div>
                   <h3>Pytorch</h3>
-                  <p>Basic</p>
+                  <p>Intermidiate</p>
                 </div>
               </article>
               <article>
