--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Computer Networking and Security</h3>
+                  <h3>Computer Networking Administration</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -156,7 +156,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Database Managment System using SQL and Oracle</h3>
+                  <h3>SQL and Oracle Database Aministration</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -200,7 +200,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Power BI Data Analysis</h3>
+                  <h3>Power BI and Tableau Data Analysis</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
