--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com//myusra99/''"
           />
         </div>
       </div>
@@ -156,7 +156,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SQL and Oracle Database Aministration</h3>
+                  <h3>SQL and Oracle Database Administration</h3>
                   <p>Experienced</p>
                 </div>
               </article>
