--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com//myusra99/''"
+            onclick="location.href='https://github.com/myusra99/''"
           />
         </div>
       </div>
@@ -405,7 +405,7 @@
           <div class="btn-container">
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
+              onclick="location.href='https://github.com/myusra99/ml4healthcare'"
             >
               Github
             </button>
