--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/myusra99/'"
+            onclick="location.href='https://github.com/myusra99'"
           />
         </div>
       </div>
