--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/myusra99/'"
+            onclick="location.href='https://www.linkedin.com/in/seid-yesuf/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/myusra99'"
+            onclick="location.href='https://github.com/seid-yesuf/'"
           />
         </div>
       </div>
@@ -112,14 +112,13 @@
           <div class="text-container">
             <p>
               I am an experienced computer science professional with a diverse
-              background in software development, IT solutions, and data
-              analysis. Over the years, I have held various roles that allowed
-              me to contribute across multiple industry sectors. I specialize in
-              designing and developing software applications, conducting
-              research and teaching, managing complex datasets, and ensuring
-              efficient IT operations. My expertise spans programming languages,
-              algorithms, database management, software engineering, and IT
-              support.
+              background in software development, IT solutions, and data analysis.
+              Over the years, I have held various roles that allowed me to contribute 
+              across multiple industry sectors.Ispecialize in designing and developing 
+              software applications,conducting research and teaching, managing complex 
+              datasets, and ensuring efficient IT operations.My expertise spans 
+              programming languages, algorithms, database management, software engineering, 
+              Artificial Intelligence and IT support.
             </p>
           </div>
         </div>
@@ -326,7 +325,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Pytorch</h3>
+                  <h3>PyTorch</h3>
                   <p>Intermidiate</p>
                 </div>
               </article>
@@ -338,7 +337,7 @@
                 />
                 <div>
                   <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <p>Exprienced</p>
                 </div>
               </article>
             </div>
@@ -365,7 +364,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/myusra99/amald'"
+                onclick="location.href='https://github.com/seid-yesuf/amald'"
               >
                 Github
               </button>
@@ -376,7 +375,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/myusra99/ml4agriculture'"
+                onclick="location.href='https://github.com/seid-yesuf/ml4agriculture'"
               >
                 Github
               </button>
@@ -390,7 +389,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/myusra99/ml4healthcare'"
+                onclick="location.href='https://github.com/seid-yesuf/ml4healthcare'"
               >
                 Github
               </button>
@@ -405,7 +404,7 @@
           <div class="btn-container">
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/myusra99/ml4healthcare'"
+              onclick="location.href='https://github.com/seid-yesuf/ml4healthcare'"
             >
               Github
             </button>
@@ -439,7 +438,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/myusra99/">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/seid-yesuf/">LinkedIn</a></p>
         </div>
       </div>
     </section>
