--- a/index.html
+++ b/index.html
@@ -111,14 +111,9 @@
           </div>
           <div class="text-container">
             <p>
-              I am an experienced computer science professional with a diverse
-              background in software development, IT solutions, and data analysis.
-              Over the years, I have held various roles that allowed me to contribute 
-              across multiple industry sectors.Ispecialize in designing and developing 
-              software applications,conducting research and teaching, managing complex 
-              datasets, and ensuring efficient IT operations.My expertise spans 
-              programming languages, algorithms, database management, software engineering, 
-              Artificial Intelligence and IT support.
+    I am an experienced computer science professional with a diverse background in software development, IT solutions, and data analysis.
+    Over the years, I have held various roles that allowed me to contribute across multiple industry sectors.I specialize in designing and developing software applications,conducting research and teaching, managing complex 
+datasets, and ensuring efficient IT operations. My expertise spans programming languages, algorithms,database management, software engineering,Artificial Intelligence and IT support.
             </p>
           </div>
         </div>
