--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
@@ -110,11 +113,12 @@
             </div>
           </div>
           <div class="text-container">
-            <p>
-    I am an experienced computer science professional with a diverse background in software development, IT solutions, and data analysis.
-    Over the years, I have held various roles that allowed me to contribute across multiple industry sectors.I specialize in designing and developing software applications,conducting research and teaching, managing complex 
-datasets, and ensuring efficient IT operations. My expertise spans programming languages, algorithms,database management, software engineering,Artificial Intelligence and IT support.
-            </p>
+            <p> I am an experienced computer science professional with a diverse background in machine learning, 
+              software development, IT solutions, and data analysis. Over the years, I have held various roles that have
+              allowed me to contribute to multiple industry sectors. I specialize in designing and developing software
+              applications, conducting research in machine learning, managing complex datasets, and ensuring efficient
+              IT operations. My expertise spans programming languages, algorithms, database management, software
+              engineering, artificial intelligence, and IT support.</p>
           </div>
         </div>
       </div>
