--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
           </div>
           <div class="text-container">
-            <p> I am an experienced computer science professional with a diverse background in machine learning, 
+            <p style="text-align:justify;"> I am an experienced computer science professional with a diverse background in machine learning, 
               software development, IT solutions, and data analysis. Over the years, I have held various roles that have
               allowed me to contribute to multiple industry sectors. I specialize in designing and developing software
               applications, conducting research in machine learning, managing complex datasets, and ensuring efficient
