--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
-      <h1 class="title">About Me</h1>
+      <h1 class="title">About Me</h1><br><br>
       <div class="section-container">
         <div class="section__pic-container">
           <img
