--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               allowed me to contribute to multiple industry sectors. I specialize in designing and developing software
               applications, conducting research in machine learning, managing complex datasets, and ensuring efficient
               IT operations. My expertise spans programming languages, algorithms, database management, software
-              engineering, artificial intelligence, and IT support.</p>
+              engineering, artificial intelligence, and IT support.</p><br><br>
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
       />
     </section>
     <section id="experience">
-      <h1 class="title">Experience</h1>
+      <h1 class="title">Experiences</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
