--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
             onclick="location.href='https://www.linkedin.com/in/seid-yesuf/'"
           />
           <img
+            src="https://scholar.google.com/schhp?hl=en"
+            alt="My Github profile"
+            class="icon"
+            onclick="location.href='https://scholar.google.com/citations?user=7YZUCP8AAAAJ&hl=en/'"
+          />
+
+           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
