--- a/index.html
+++ b/index.html
@@ -69,19 +69,27 @@
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/seid-yesuf/'"
           />
-          <img
-            src="https://scholar.google.com/schhp?hl=en"
-            alt="My Github profile"
-            class="icon"
-            onclick="location.href='https://scholar.google.com/citations?user=7YZUCP8AAAAJ&hl=en/'"
-          />
-
+          
            <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/seid-yesuf/'"
           />
+          <img
+            src="./assets/google.png"
+            alt="My Google Scholar profile"
+            class="icon"
+            onclick="location.href='https://scholar.google.com/citations?user=7YZUCP8AAAAJ&hl=en/'"
+          />
+           <img
+            src="./assets/rgate.png"
+            alt="My Research Gate profile"
+            class="icon"
+            onclick="location.href='https://www.researchgate.net/profile/Seid-Yesuf?ev=hdr_xprf/'"
+          />
+
+          
         </div>
       </div>
     </section>
