--- a/index.html
+++ b/index.html
@@ -370,8 +370,9 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
-                        <h5>
-              Multimodal Amharic Abusive language Detection using Deep Learning
+            <div class="article-container">
+        <h5>
+      Multimodal Amharic Abusive language Detection using Deep Learning
               Approach
             </h5>
             <div class="btn-container">
@@ -384,7 +385,8 @@
             </div>
           </div>
           <div class="details-container color-container">
-                        <h5>Crop Recommendation Systems Using Machine Learning Algorithms</h5>
+            <div class="article-container">
+           <h5>Crop Recommendation Systems Using Machine Learning Algorithms</h5>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -412,7 +414,7 @@
           
         </div>
         <div class="details-container color-container">
-            
+           <div class="article-container"> 
           <h5>Breast Cancer Prediction Using Machine Learning Algorithms</h5>
           <div class="btn-container">
             <button
