--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
               </button>
             </div>
           </div>
+          </div>
           <div class="details-container color-container">
             <div class="article-container">
            <h5>Crop Recommendation Systems Using Machine Learning Algorithms</h5>
@@ -396,6 +397,7 @@
               </button>
               
             </div>
+          </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
