--- a/index.html
+++ b/index.html
@@ -127,12 +127,11 @@
             </div>
           </div>
           <div class="text-container">
-            <p style="text-align:justify;"> I am an experienced computer science professional with a diverse background in machine learning, 
-              software development, IT solutions, and data analysis. Over the years, I have held various roles that have
-              allowed me to contribute to multiple industry sectors. I specialize in designing and developing software
-              applications, conducting research in machine learning, managing complex datasets, and ensuring efficient
-              IT operations. My expertise spans programming languages, algorithms, database management, software
-              engineering, artificial intelligence, and IT support.</p><br><br>
+            <p style="text-align:justify;"> I am a computer science professional with expertise in machine learning, software development, database analysis, 
+              IT support, and computer science education. I specialize in designing and developing software applications, conducting machine learning research,
+              managing complex datasets, optimizing IT operations, and teaching computer science courses.
+                 My skill set includes programming, algorithm design, database management, computer network administration, artificial intelligence,
+              and software engineering. These skills enable me to deliver innovative and efficient technology solutions across various industries.</p><br><br>
           </div>
         </div>
       </div>
