--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/seid_resume.pdf')"
+            onclick="window.open('./assets/Seid_CV..pdf')"
           >
             Download CV
           </button>
