--- a/index.html
+++ b/index.html
@@ -82,12 +82,17 @@
             onclick="location.href='https://scholar.google.com/citations?user=7YZUCP8AAAAJ&hl=en/'"
           />
            <img
-            src="./assets/rgate.png"
+            src="./assets/orcid.png"
             alt="My Research Gate profile"
             class="icon"
             onclick="location.href='https://www.researchgate.net/profile/Seid-Yesuf?ev=hdr_xprf/'"
           />
-
+        <img
+            src="./assets/rgate.png"
+            alt="My Research Gate profile"
+            class="icon"
+            onclick="location.href='https://orcid.org/0000-0002-4573-9103/'"
+          />
           
         </div>
       </div>
