--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.jpg"
+            src="./assets/pic.jpg"
             alt="Profile picture"
             class="about-pic"
           />
