--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Seid Hasssen Yesuf</h1>
         <p class="section__text__p2">
-          Senior Lecturer of Computer Science at University of Gondar
+          Assistant Professor of Computer Science at University of Gondar
         </p>
         <div class="btn-container">
           <button
