--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Seid Hassen Yesuf</div>
+      <div class="logo">Seid H. Yesuf</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -46,7 +46,7 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Seid Hasssen Yesuf</h1>
+        <h1 class="title">Seid H. Yesuf</h1>
         <p class="section__text__p2">
           Assistant Professor of Computer Science at University of Gondar
         </p>
@@ -117,7 +117,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>10+ years <br />Senior Lecturer</p>
+              <p>12+ years <br />Senior Lecturer</p>
               <p>2+ years <br />IT Project Manager</p>
             </div>
             <div class="details-container">
