--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 />
                 <div>
                   <h3>Power BI and Tableau Data Analysis</h3>
-                  <p>Intermediate</p>
+                  <p>Experienced</p>
                 </div>
               </article>
             </div>
