--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Seid H. Yesuf</h1>
         <p class="section__text__p2">
-          Assistant Professor of Computer Science at University of Gondar
+          Asst.Professor of Computer Science at University of Gondar
         </p>
         <div class="btn-container">
           <button
@@ -132,10 +132,11 @@
           </div>
           <div class="text-container">
             <p style="text-align:justify;"> I am a computer science professional with expertise in machine learning, software development, database analysis, 
-              IT support, and computer science education. I specialize in designing and developing software applications, conducting machine learning research,
-              managing complex datasets, optimizing IT operations, and teaching computer science courses.
-                 My skill set includes programming, algorithm design, database management, computer network administration, artificial intelligence,
-              and software engineering. These skills enable me to deliver innovative and efficient technology solutions across various industries.</p><br><br>
+              IT support, and computer science education. I specialize in designing and developing software applications, conducting applied machine learning research, 
+              managing complex datasets, optimizing IT operations, and teaching computer science at various levels.
+              My technical skill set includes programming, algorithm design, database management, network administration, 
+              artificial intelligence, and software engineering. These capabilities allow me to deliver innovative, 
+              scalable, and efficient technology solutions across diverse industries and environments.</p><br><br>
           </div>
         </div>
       </div>
