--- a/index.html
+++ b/index.html
@@ -176,8 +176,6 @@
                   <p>Experienced</p>
                 </div>
               </article>
-                 
-              
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -185,7 +183,29 @@
                   class="icon"
                 />
                 <div>
-                  <h3>IBM Cognos, Power BI and Tableau Data Analysis</h3>
+                  <h3>Power BI Data Analysis</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+               <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Tableau Data Analysis</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>IBM Cognos Data Analysis, Power BI and Tableau Data Analysis</h3>
                   <p>Experienced</p>
                 </div>
               </article>
