--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>IBM Cognos Data Analysis, Power BI and Tableau Data Analysis</h3>
+                  <h3>IBM Cognos Data Analysis</h3>
                   <p>Experienced</p>
                 </div>
               </article>
