--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SQL and Oracle Database Administration</h3>
+                  <h3>SQL and Oracle Database Systems</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -194,7 +194,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Power BI Data Analysis</h3>
+                  <h3>Power BI</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -205,7 +205,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Tableau Data Analysis</h3>
+                  <h3>Tableau</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -216,7 +216,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>IBM Cognos Data Analysis</h3>
+                  <h3>IBM Cognos</h3>
                   <p>Experienced</p>
                 </div>
               </article>
