--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </div>
           <div class="text-container">
             <p style="text-align:justify;"> I am a computer science professional with expertise in machine learning, software development, database analysis, IT project management, and computer science education. 
-              I specialize in designing and developing software applications, conducting applied machine learning research, managing complex datasets, optimizing IT operations, and teaching computer science at various levels.</p><p></p>
+              I specialize in designing and developing software applications, conducting applied machine learning research, managing complex datasets, optimizing IT operations, and teaching computer science at various levels.
               My technical skills include programming, algorithm design, database management, network administration, artificial intelligence, and software engineering. These capabilities enable me to deliver innovative, scalable, and efficient technology solutions across diverse industries and environments.
               
             </p><br><br>
