Revise experience and skills in index.html
Updated experience details and technical skills in the profile section of index.html.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>12+ years <br />Senior Lecturer</p>
+              <p>10+ years <br />Senior Lecturer</p>
               <p>5+ years <br /> Software Developer and IT Project Manager</p>
             </div>
             <div class="details-container">
@@ -131,10 +131,14 @@
             </div>
           </div>
           <div class="text-container">
-            <p style="text-align:justify;"> I am a computer science professional with expertise in machine learning, software development, database analysis, IT project management, and computer science education. 
-              I specialize in designing and developing software applications, conducting applied machine learning research, managing complex datasets, optimizing IT operations, and teaching computer science at various levels.
-              My technical skills include programming, algorithm design, database management, network administration, artificial intelligence, and software engineering. These capabilities enable me to deliver innovative, scalable, and efficient technology solutions across diverse industries and environments.
+            <p style="text-align:justify;"> I’m a data engineer and machine learning practitioner with over 14 years of experience spanning software development, data engineering, analytics, and computer science education. Throughout my career, 
+              I’ve focused on designing scalable data pipelines, building reliable ETL/ELT workflows, and applying machine learning techniques to solve real-world business problems.
+              My technical toolkit includes Python, SQL, Apache Spark, and modern cloud platforms such as Google Cloud, AWS, and Azure.  I also work closely with analytics and visualization tools like Power BI, enabling organizations to transform raw data into clear, actionable insights that support informed decision-making.
+             
+              With a strong background in both data engineering and analytics, I bring a holistic, end-to-end perspective to data solutions—bridging business needs with performant, 
+              secure, and scalable data architectures. I enjoy collaborating with cross-functional teams and turning complex data challenges into practical, impactful solutions.
               
+              I’m continuously learning, mentoring, and exploring new ways to leverage data and AI to create value.
             </p><br><br>
           </div>
         </div>
@@ -160,7 +164,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Computer Networking Administration</h3>
+                  <h3>SQL</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -171,7 +175,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SQL and Oracle Database Systems</h3>
+                  <h3>SQL & Database Systems</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -193,7 +197,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Power BI</h3>
+                  <h3>Data Analytics & visualizationI</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -204,7 +208,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Tableau</h3>
+                  <h3> Data Modeling & Design</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -215,7 +219,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>IBM Cognos</h3>
+                  <h3>Big Data Tools</h3>
                   <p>Experienced</p>
                 </div>
               </article>
