Revise professional summary and experience details
Updated professional summary and skills section to enhance clarity and relevance. Corrected various headings and descriptions for better accuracy.

--- a/index.html
+++ b/index.html
@@ -131,13 +131,9 @@
             </div>
           </div>
           <div class="text-container">
-            <p style="text-align:justify;"> I’m a data engineer and machine learning practitioner with over 14 years of experience spanning software development, data engineering, analytics, and computer science education. Throughout my career, 
-              I’ve focused on designing scalable data pipelines, building reliable ETL/ELT workflows, and applying machine learning techniques to solve real-world business problems.
-              My technical toolkit includes Python, SQL, Apache Spark, and modern cloud platforms such as Google Cloud, AWS, and Azure.  I also work closely with analytics and visualization tools like Power BI, enabling organizations to transform raw data into clear, actionable insights that support informed decision-making.
-             
-              With a strong background in both data engineering and analytics, I bring a holistic, end-to-end perspective to data solutions—bridging business needs with performant, 
-              secure, and scalable data architectures. I enjoy collaborating with cross-functional teams and turning complex data challenges into practical, impactful solutions.
-              
+            <p style="text-align:justify;"> I’m a Data Engineer and Machine Learning Practitioner with 14+ years of experience across software development, data engineering, analytics, and computer science education. I specialize in building scalable data pipelines, reliable ETL/ELT workflows, and applying machine learning to solve real-world business problems.
+
+My core skills include Python, SQL, Apache Spark, and cloud platforms (GCP, AWS, Azure), along with Power BI for data analytics and visualization. I bring an end-to-end, business-focused approach to data solutions, collaborating with cross-functional teams to turn complex data into secure, scalable, and actionable insights.
               I’m continuously learning, mentoring, and exploring new ways to leverage data and AI to create value.
             </p><br><br>
           </div>
@@ -175,7 +171,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SQL & Database Systems</h3>
+                  <h3>Database Managment Systems</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -197,7 +193,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Data Analytics & visualizationI</h3>
+                  <h3>Data Analytics & visualization</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -208,7 +204,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3> Data Modeling & Design</h3>
+                  <h3>Python</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -219,14 +215,14 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Big Data Tools</h3>
+                  <h3>Big Data </h3>
                   <p>Experienced</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Software Development</h2>
+            <h2 class="experience-sub-title">Data Engineering</h2>
             <div class="article-container">
               <article>
                 <img
@@ -235,7 +231,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Python</h3>
+                  <h3>PySpark</h3>
                   <p>Exprienced</p>
                 </div>
               </article>
@@ -257,8 +253,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
-                  <p>Exprienced</p>
+                  <h3>Spark</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
                <article>
@@ -268,18 +264,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PHP</h3>
-                  <p>Exprienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Laravel</h3>
+                  <h3>Apache Spark</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -290,7 +275,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Django</h3>
+                  <h3>Big Query</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Databricks Platform</h3>
                   <p>Intermediate</p>
                 </div>
               </article>     
@@ -301,7 +297,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Java</h3>
+                  <h3>Data Pipeline Tools</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
