--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
           </div>
           <div class="text-container">
-            <p style="text-align:justify;"> I’m a Data Engineer and Machine Learning Practitioner with 14+ years of experience across software development, data engineering, analytics, and computer science education. I specialize in building scalable data pipelines, reliable ETL/ELT workflows, and applying machine learning to solve real-world business problems.
+            <p style="text-align:justify;"> I’m a Data Engineer and Machine Learning Practitioner with 15+ years of experience across software development, data engineering, analytics, and computer science education. I specialize in building scalable data pipelines, reliable ETL/ELT workflows, and applying machine learning to solve real-world business problems.
 
 My core skills include Python, SQL, Apache Spark, and cloud platforms (GCP, AWS, Azure), along with Power BI for data analytics and visualization. I bring an end-to-end, business-focused approach to data solutions, collaborating with cross-functional teams to turn complex data into secure, scalable, and actionable insights.
               I’m continuously learning, mentoring, and exploring new ways to leverage data and AI to create value.
@@ -219,6 +219,28 @@ My core skills include Python, SQL, Apache Spark, and cloud platforms (GCP, AWS,
                   <p>Experienced</p>
                 </div>
               </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Data Modeling and Design </h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Data Mining and Warehouses</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
             </div>
           </div>
           <div class="details-container">
@@ -253,7 +275,7 @@ My core skills include Python, SQL, Apache Spark, and cloud platforms (GCP, AWS,
                   class="icon"
                 />
                 <div>
-                  <h3>Spark</h3>
+                  <h3>Cloud Platforms </h3>
                   <p>Intermediate</p>
                 </div>
               </article>
